[package]
name = "py-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = { version = "1.15.0", features = ["full"] }
hex = "0.4.3"
rand = "0.8.4"
serde = "1.0.136"
serde_json = "1.0.78"
serde_derive = "1.0.136"
futures-retry = "0.6.0"
clap = { version = "3.0.13", features = ["derive"] }
either = "1.6.1"
bigdecimal = "0.3.0"
zeroize = "1.5.2"
secp256k1 = "0.20.3"
sodiumoxide = "0.2.5"
hyper = { version = "0.14.17", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.2"
hex-literal = "0.3.4"
hyper-tls = "0.5.0"
http = "0.2.6"
bytes = "1.1.0"
teloxide = { version = "0.7.1", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
thiserror = "1.0.30"
actix-web = "4.0.1"
web3 = "0.18.0"